--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>유아플랜 정책자금 컨설팅</title>
+  <title>유아플랜 컨설팅 - 정책자금 컨설팅</title>
   <meta name="description" content="정책자금, AI가 분석하고 사람이 결정합니다. 유아플랜은 실시간 공고·요건을 표준화해 맞춤 매칭을 투명하게 제시합니다.">
   <style>
     :root{
@@ -40,7 +40,7 @@
 <body>
   <header>
     <div class="wrap hero">
-      <div class="badge">YOUAPLAN — 정책자금 컨설팅</div>
+      <div class="badge">youareplan — 정책자금 컨설팅</div>
       <h1>정책자금, <u>AI가 분석</u>하고 <u>사람이 결정</u>합니다.</h1>
       <p>실시간 공고·요건을 표준화 데이터로 분석하고, 회장님의 상황에 맞는 매칭을 투명하게 제시합니다.</p>
       <div class="btn-row">
@@ -96,7 +96,7 @@
 
   <footer>
     <div class="wrap">
-      <div><strong>유아플랜 컨설팅</strong> · youaplan.kr</div>
+      <div><strong>유아플랜 컨설팅</strong> · youareplan.co.kr</div>
       <div class="notice">개인정보는 1차 진단·상담 목적에만 사용하며 보관·파기 정책을 준수합니다.</div>
     </div>
   </footer>
