--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <body>
   <header>
     <div class="wrap hero">
+      <img src="logo.png" alt="유아플랜 로고" style="height:60px; margin-bottom:20px;">
       <div class="badge">youareplan — 정책자금 컨설팅</div>
       <h1>정책자금, <u>AI가 분석</u>하고 <u>사람이 결정</u>합니다.</h1>
       <p>실시간 공고·요건을 표준화 데이터로 분석하고, 회장님의 상황에 맞는 매칭을 투명하게 제시합니다.</p>
