--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
   <header>
     <div class="wrap hero">
       <img src="logo.png" alt="유아플랜 로고" style="height:60px; margin-bottom:20px;">
+      <nav style="margin-top:10px; display:flex; gap:20px; font-weight:500;">
+        <a href="#about" style="color:#fff; text-decoration:none;">회사소개</a>
+        <a href="#services" style="color:#fff; text-decoration:none;">서비스</a>
+        <a href="#faq" style="color:#fff; text-decoration:none;">FAQ</a>
+        <a href="#contact" style="color:#fff; text-decoration:none;">문의하기</a>
+      </nav>
       <div class="badge">youareplan — 정책자금 컨설팅</div>
       <h1>정책자금, <u>AI가 분석</u>하고 <u>사람이 결정</u>합니다.</h1>
       <p>실시간 공고·요건을 표준화 데이터로 분석하고, 회장님의 상황에 맞는 매칭을 투명하게 제시합니다.</p>
