--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
   </header>
 
-  <section>
+  <section id="about">
     <div class="wrap">
       <h2>왜 유아플랜인가</h2>
       <div class="grid cols-3">
@@ -68,7 +68,7 @@
     </div>
   </section>
 
-  <section>
+  <section id="services">
     <div class="wrap">
       <h2>진행 절차</h2>
       <ol class="process">
@@ -82,7 +82,7 @@
     </div>
   </section>
 
-  <section>
+  <section id="faq">
     <div class="wrap">
       <h2>자주 묻는 질문</h2>
       <div class="grid cols-3">
@@ -100,7 +100,19 @@
       <p class="notice">로딩에 다소 시간이 걸릴 수 있습니다.</p>
     </div>
   </section>
-
+ 
+  <section id="contact">
+    <div class="wrap">
+      <h2>문의하기</h2>
+      <div class="card">
+        <p><strong>유아플랜 컨설팅</strong></p>
+        <p>이메일: <a href="mailto:hello@youareplan.co.kr">hello@youareplan.co.kr</a></p>
+        <p>상담 가능 시간: 평일 10:00–18:00</p>
+        <p class="notice">* 이메일 주소는 원하시는 주소로 언제든 바꿀 수 있습니다.</p>
+      </div>
+    </div>
+  </section>
+  
   <footer>
     <div class="wrap">
       <div><strong>유아플랜 컨설팅</strong> · youareplan.co.kr</div>
