--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
       <h2>문의하기</h2>
       <div class="card">
         <p><strong>유아플랜 컨설팅</strong></p>
-        <p>전화: 010-1234-5678</p>
-        <p>이메일: <a href="mailto:hello@youareplan.co.kr">hello@youareplan.co.kr</a></p>
-        <p>상담 가능 시간: 평일 10:00–18:00</p>
-        <p><a href="https://pf.kakao.com/_yourlink" target="_blank">카카오톡 상담 바로가기</a></p>
+        <p>대표번호: 1661-8804</p>
+        <p>이메일: <a href="mailto:ceo@youareplan.co.kr">hello@youareplan.co.kr</a></p>
+        <p>상담 가능 시간: 평일 09:00–18:00</p>
+        <p><a href="https://pf.kakao.com/_LWxexmn" target="_blank">카카오톡 상담 바로가기</a></p>
         <p class="notice">* 이메일/연락처는 원하시는 대로 언제든 수정 가능합니다.</p>
       </div>
     </div>
@@ -158,7 +158,7 @@
   <footer>
     <div class="wrap">
       <div><strong>유아플랜 컨설팅</strong> · youareplan.co.kr</div>
-      <div>사업자등록번호: 123-45-67890 · 대표: 김대환</div>
+      <div>사업자등록번호: 515-10-64034 · 대표: 김대환</div>
       <div><a href="#">개인정보처리방침</a> · <a href="#">이용약관</a></div>
       <div class="notice">© 2025 YouArePlan Consulting. 모든 권리 보유.</div>
     </div>
