--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <div class="card">
         <p><strong>유아플랜 컨설팅</strong></p>
         <p>대표번호: 1661-8804</p>
-        <p>이메일: <a href="mailto:ceo@youareplan.co.kr">hello@youareplan.co.kr</a></p>
+        <p>이메일: <a href="mailto:youareplan@naver.com">youareplan@naver.com</a></p>
         <p>상담 가능 시간: 평일 09:00–18:00</p>
         <p><a href="https://pf.kakao.com/_LWxexmn" target="_blank">카카오톡 상담 바로가기</a></p>
         <p class="notice">* 이메일/연락처는 원하시는 대로 언제든 수정 가능합니다.</p>
