--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
   <style>
     :root{
-      --primary:#005BAC;      /* 정부 파랑 */
-      --navy:#0B1B2B;         /* 헤더 네이비 */
-      --text:#111827;         /* 본문 */
-      --muted:#6B7280;        /* 설명 */
-      --border:#E5E7EB;       /* 경계 */
-      --bg:#ffffff;           /* 배경 */
+      --primary:#005BAC;
+      --navy:#0B1B2B;
+      --text:#111827;
+      --muted:#6B7280;
+      --border:#E5E7EB;
+      --bg:#ffffff;
       --radius:12px;
       --shadow:0 6px 24px rgba(16,24,40,.06);
     }
@@ -33,24 +33,24 @@
     html{scroll-behavior:smooth}
     body{margin:0;font-family:Inter, Pretendard, "Noto Sans KR", system-ui, -apple-system, Segoe UI, Roboto, sans-serif;color:var(--text);background:var(--bg);line-height:1.65}
 
-    /* Header / Hero */
+    /* Header */
     header{
       background:linear-gradient(180deg,var(--navy),#0f2740);
       color:#fff; padding:56px 20px 28px;
       border-bottom:4px solid var(--primary);
     }
     .wrap{max-width:1100px;margin:0 auto}
-
-    .brand{display:flex;align-items:center;gap:18px;margin-bottom:8px}
-    /* ✅ 로고 크게 + 어두운 배경에서 흰색처럼 보이게 */
+    .brand{display:flex;align-items:center;gap:16px;margin-bottom:8px}
     .brand img{
-      height:120px; width:auto; display:block;
-      filter:brightness(0) invert(1);           /* 색상 반전(임시) */
+      height:120px;
+      width:auto;
+      display:block;
+      filter:brightness(0) invert(1); /* 파란색 로고 → 흰색으로 표시 */
     }
     @media (max-width:640px){
-      .brand img{height:84px}
+      .brand img{height:80px}
     }
-    .brand .wordmark{font-weight:800;letter-spacing:.5px;font-size:22px}
+    .brand .wordmark{font-weight:800;letter-spacing:.5px;font-size:20px;color:#fff}
 
     .site-nav{
       position:sticky; top:0; z-index:50;
@@ -61,8 +61,8 @@
     .site-nav a{color:#fff;text-decoration:none;font-weight:600}
     .site-nav a:hover{color:#cfe6ff;text-decoration:underline}
 
-    .badge{display:inline-block;background:#cfe6ff14;color:#e8f1ff;padding:6px 12px;border-radius:999px;font-size:12px;border:1px solid #2a4265}
-    .hero h1{font-size:42px;margin:12px 0 10px}
+    .badge{display:inline-block;background:#cfe6ff14;color:#e8f1ff;padding:5px 10px;border-radius:999px;font-size:12px;border:1px solid #2a4265}
+    .hero h1{font-size:40px;margin:12px 0 10px}
     .hero p{color:#E5E7EB;margin:0 0 24px}
 
     .btn-row{display:flex;gap:12px;flex-wrap:wrap}
@@ -96,7 +96,7 @@
     .cell{padding:12px 16px}
     .head{background:#f8fafc;font-weight:700}
 
-    /* Iframe (설문) */
+    /* Iframe */
     iframe{width:100%;border:1px solid var(--border);border-radius:var(--radius);min-height:720px;background:#fff}
 
     /* Footer */
@@ -105,43 +105,20 @@
     .policy a{color:#334155;text-decoration:none}
     .policy a:hover{text-decoration:underline}
 
-    /* Floating Back-to-top */
+    /* Back-to-top */
     .top{position:fixed;right:16px;bottom:18px;padding:10px 12px;border-radius:999px;background:var(--navy);color:#fff;text-decoration:none;font-size:12px;border:1px solid #173150}
     .top:hover{background:#0b2c55}
   </style>
-
-  <!-- 구조화 데이터 -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "유아플랜 컨설팅",
-    "url": "https://youareplan.co.kr",
-    "logo": "https://youareplan.co.kr/logo.png",
-    "sameAs": ["https://pf.kakao.com/_LWxexmn"],
-    "contactPoint": [{
-      "@type": "ContactPoint",
-      "contactType": "customer support",
-      "email": "youareplan@naver.com",
-      "telephone": "1661-8804",
-      "areaServed": "KR",
-      "availableLanguage": ["ko"]
-    }]
-  }
-  </script>
 </head>
 <body id="top">
-  <!-- Header / Hero -->
+  <!-- Header -->
   <header>
     <div class="wrap hero" role="banner">
       <div class="brand" aria-label="브랜드">
-        <!-- 현재 저장소의 logo.png 사용(필요시 logo-white.png로 교체하고 filter 제거) -->
         <img src="logo.png" alt="유아플랜 로고" />
         <div class="wordmark">YOUAREPLAN · 정책자금 컨설팅</div>
       </div>
-
-      <!-- Sticky Nav -->
-      <nav class="site-nav" aria-label="주 메뉴">
+      <nav class="site-nav">
         <a href="#about">회사소개</a>
         <a href="#services">서비스</a>
         <a href="#notice">공지사항</a>
@@ -149,19 +126,17 @@
         <a href="#faq">FAQ</a>
         <a href="#contact">문의하기</a>
       </nav>
-
       <span class="badge">표준화 DB · 요건 매칭 · 컨설턴트 최종 판단</span>
       <h1>정책자금, <u>AI가 분석</u>하고 <u>사람이 결정</u>합니다.</h1>
       <p>실시간 공고·요건을 표준화 데이터로 분석하고, 회장님의 상황에 맞는 매칭을 투명하게 제시합니다.</p>
-
-      <div class="btn-row" role="group" aria-label="핵심 행동">
-        <a class="cta" href="https://survey.youareplan.co.kr" target="_blank" rel="noopener">1분 만에 1차 진단 시작</a>
+      <div class="btn-row">
+        <a class="cta" href="https://survey.youareplan.co.kr" target="_blank">1분 만에 1차 진단 시작</a>
         <a class="ghost" href="#apply">페이지에서 바로 작성</a>
       </div>
     </div>
   </header>
 
-  <!-- 왜 유아플랜 -->
+  <!-- About -->
   <section id="about">
     <div class="wrap">
       <h2>왜 유아플랜인가</h2>
@@ -171,7 +146,6 @@
         <div class="card"><strong>요건 매칭</strong><br>업력·업종·체납 등 핵심 조건을 한눈에 정리합니다.</div>
         <div class="card"><strong>사람이 최종 판단</strong><br>AI 분석을 보조로, 컨설턴트가 책임 있게 안내합니다.</div>
       </div>
-
       <div class="trust" style="margin-top:18px">
         <span class="tag">개인정보 최소수집·목적외 이용 금지</span>
         <span class="tag">진행 단계·결과 리포트 제공</span>
@@ -180,25 +154,15 @@
     </div>
   </section>
 
-  <!-- 서비스 -->
+  <!-- Services -->
   <section id="services">
     <div class="wrap">
       <h2>서비스 구성</h2>
       <div class="grid cols-3">
-        <div class="card">
-          <strong>① 1차 진단(무료)</strong><br>
-          표준 설문으로 요건 적합성, 우선순위 후보를 빠르게 도출합니다.
-        </div>
-        <div class="card">
-          <strong>② 컨설팅 & 서류 준비</strong><br>
-          신청 전략 수립, 증빙 체크리스트, 제출 문서 검토/작성까지 전담 지원.
-        </div>
-        <div class="card">
-          <strong>③ 실행 & 사후 추적</strong><br>
-          접수/심사·보완 대응, 결과 리포트, 차기 스텝 가이드 제공.
-        </div>
+        <div class="card"><strong>① 1차 진단(무료)</strong><br>표준 설문으로 요건 적합성, 우선순위 후보를 빠르게 도출합니다.</div>
+        <div class="card"><strong>② 컨설팅 & 서류 준비</strong><br>신청 전략 수립, 증빙 체크리스트, 제출 문서 검토/작성까지 전담 지원.</div>
+        <div class="card"><strong>③ 실행 & 사후 추적</strong><br>접수/심사·보완 대응, 결과 리포트, 차기 스텝 가이드 제공.</div>
       </div>
-
       <h3 style="margin:26px 0 10px">진행 절차</h3>
       <ol class="process">
         <li>정보 수집 (기업마당·소진공·신보 등)</li>
@@ -207,50 +171,30 @@
         <li>상담/서류 준비</li>
         <li>신청·실행 및 추적</li>
       </ol>
-      <p class="notice">* 자동매매 등 불법 영역은 일절 관여하지 않으며, 관련 법규를 철저히 준수합니다.</p>
     </div>
   </section>
 
-  <!-- 공지 -->
+  <!-- Notice -->
   <section id="notice">
     <div class="wrap">
       <h2>공지사항</h2>
-      <div class="table" role="table" aria-label="공지 목록">
-        <div class="row head" role="row">
-          <div class="cell" role="columnheader">날짜</div>
-          <div class="cell" role="columnheader">제목</div>
-        </div>
-        <div class="row" role="row">
-          <div class="cell" role="cell">2025-09-09</div>
-          <div class="cell" role="cell">유아플랜 정책자금 진단 서비스 오픈</div>
-        </div>
-        <div class="row" role="row">
-          <div class="cell" role="cell">2025-10 예정</div>
-          <div class="cell" role="cell">매칭 알고리즘/리포트 고도화 업데이트</div>
-        </div>
+      <div class="table">
+        <div class="row head"><div class="cell">날짜</div><div class="cell">제목</div></div>
+        <div class="row"><div class="cell">2025-09-09</div><div class="cell">정책자금 진단 서비스 오픈</div></div>
+        <div class="row"><div class="cell">2025-10 예정</div><div class="cell">매칭 알고리즘/리포트 고도화 업데이트</div></div>
       </div>
     </div>
   </section>
 
-  <!-- 사례/신뢰 -->
+  <!-- Cases -->
   <section id="cases">
     <div class="wrap">
       <h2>사례 & 신뢰</h2>
       <div class="grid cols-3">
-        <div class="card">
-          <strong>제조 스타트업 A</strong><br>
-          업력·매출 패턴 반영해 보조금 2건 동시 매칭, 서류 보완 1회로 통과.
-        </div>
-        <div class="card">
-          <strong>서비스 기업 B</strong><br>
-          체납 이슈로 제한적이었으나 대체 프로그램 제안·신청으로 가결.
-        </div>
-        <div class="card">
-          <strong>예비창업 C</strong><br>
-          예비창업 특화 과제 선별·사업계획서 코칭으로 최초 지원 성공.
-        </div>
+        <div class="card"><strong>제조 스타트업 A</strong><br>보조금 2건 동시 매칭, 서류 보완 1회로 통과.</div>
+        <div class="card"><strong>서비스 기업 B</strong><br>체납 이슈 → 대체 프로그램 제안으로 가결.</div>
+        <div class="card"><strong>예비창업 C</strong><br>예비창업 특화 과제 선별·사업계획서 코칭 → 지원 성공.</div>
       </div>
-      <p class="notice">* 실제 기업의 맥락을 반영한 요약 사례입니다. 상세 공유는 별도 상담 후 가능합니다.</p>
     </div>
   </section>
 
@@ -258,24 +202,23 @@
   <section id="faq">
     <div class="wrap">
       <h2>자주 묻는 질문</h2>
-    <div class="grid cols-3">
-        <div class="card"><strong>업력 없어도 가능한가요?</strong><br>공고마다 다릅니다. 예비창업 대상 프로그램도 있으니 1차 진단으로 확인합니다.</div>
-        <div class="card"><strong>체납이 있으면 불가인가요?</strong><br>대부분 제한되지만, 상황별 대안 여부를 사전 검토합니다.</div>
+      <div class="grid cols-3">
+        <div class="card"><strong>업력 없어도 가능한가요?</strong><br>예비창업 대상 프로그램도 있으니 1차 진단으로 확인.</div>
+        <div class="card"><strong>체납이 있으면 불가인가요?</strong><br>대부분 제한되지만 상황별 대안 검토 가능.</div>
         <div class="card"><strong>기간은 얼마나 걸리나요?</strong><br>보통 2–6주. 기관/서류 준비도에 따라 달라집니다.</div>
       </div>
     </div>
   </section>
 
-  <!-- 설문 임베드 -->
+  <!-- Apply -->
   <section id="apply">
     <div class="wrap">
       <h2>1차 진단 — 바로 작성</h2>
       <iframe src="https://survey.youareplan.co.kr" title="유아플랜 1차 설문"></iframe>
-      <p class="notice">로딩에 다소 시간이 걸릴 수 있습니다.</p>
     </div>
   </section>
 
-  <!-- 문의 -->
+  <!-- Contact -->
   <section id="contact">
     <div class="wrap">
       <h2>문의하기</h2>
@@ -284,17 +227,14 @@
           <p><strong>유아플랜 컨설팅</strong></p>
           <p>대표번호: 1661-8804</p>
           <p>이메일: <a href="mailto:youareplan@naver.com">youareplan@naver.com</a></p>
-          <p>상담 가능 시간: 평일 09:00–18:00</p>
-          <p><a href="https://pf.kakao.com/_LWxexmn" target="_blank" rel="noopener">카카오톡 상담 바로가기</a></p>
-          <p class="notice">* 이메일/연락처는 언제든지 업데이트 가능합니다.</p>
+          <p><a href="https://pf.kakao.com/_LWxexmn" target="_blank">카카오톡 상담</a></p>
         </div>
         <div class="card">
-          <strong>오시는 길 / 사업자 정보</strong>
+          <strong>사업자 정보</strong>
           <div class="table" style="margin-top:10px">
             <div class="row"><div class="cell head">상호</div><div class="cell">유아플랜 컨설팅</div></div>
             <div class="row"><div class="cell head">사업자번호</div><div class="cell">515-10-64034</div></div>
             <div class="row"><div class="cell head">대표</div><div class="cell">김대환</div></div>
-            <div class="row"><div class="cell head">웹사이트</div><div class="cell"><a href="https://youareplan.co.kr">youareplan.co.kr</a></div></div>
           </div>
         </div>
       </div>
@@ -311,6 +251,6 @@
   </footer>
 
   <!-- Back to top -->
-  <a class="top" href="#top" onclick="window.scrollTo({top:0,behavior:'smooth'});return false;">맨 위로</a>
+  <a class="top" href="#top">맨 위로</a>
 </body>
 </html>
