--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="wrap hero" role="banner">
       <div class="brand" aria-label="브랜드">
         <img src="logo.png" alt="유아플랜 로고" />
-        <div class="wordmark">YOUAREPLAN · 정책자금 컨설팅</div>
+        <div class="wordmark">정책자금 컨설팅</div>
       </div>
       <nav class="site-nav">
         <a href="#about">회사소개</a>
@@ -127,8 +127,8 @@
         <a href="#contact">문의하기</a>
       </nav>
       <span class="badge">표준화 DB · 요건 매칭 · 컨설턴트 최종 판단</span>
-      <h1>정책자금, <u>AI가 분석</u>하고 <u>사람이 결정</u>합니다.</h1>
-      <p>실시간 공고·요건을 표준화 데이터로 분석하고, 회장님의 상황에 맞는 매칭을 투명하게 제시합니다.</p>
+      <h1>정책자금, <u>유아플랜 프로그램</u>이 분석하고 <u>전문가가 결정</u>합니다.</h1>
+      <p>실시간 공고·요건을 표준화 데이터로 분석하고, 전문가가 상황에 맞는 매칭을 투명하게 제시합니다.</p>
       <div class="btn-row">
         <a class="cta" href="https://survey.youareplan.co.kr" target="_blank">1분 만에 1차 진단 시작</a>
         <a class="ghost" href="#apply">페이지에서 바로 작성</a>
@@ -140,7 +140,7 @@
   <section id="about">
     <div class="wrap">
       <h2>왜 유아플랜인가</h2>
-      <p class="sub">정부기관 스타일의 표준화 프로세스로 <strong>정확성·투명성·추적성</strong>을 확보합니다.</p>
+      <p class="sub">정부기관 프로세스로 <strong>정확성·투명성·추적성</strong>을 확보합니다.</p>
       <div class="grid cols-3">
         <div class="card"><strong>표준화 DB</strong><br>정부·공공 공고를 구조화해 일관성 있게 비교합니다.</div>
         <div class="card"><strong>요건 매칭</strong><br>업력·업종·체납 등 핵심 조건을 한눈에 정리합니다.</div>
