--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="description" content="정책자금, AI가 분석하고 사람이 결정합니다. 유아플랜은 실시간 공고·요건을 표준화해 맞춤 매칭을 투명하게 제시합니다.">
   <meta name="theme-color" content="#0B1B2B" />
 
-  <!-- Open Graph / Twitter -->
   <meta property="og:title" content="유아플랜 컨설팅 | 정책자금 컨설팅" />
   <meta property="og:description" content="실시간 공고 표준화 DB + 요건 매칭 + 컨설턴트 최종 판단. 투명하고 신뢰 가능한 정책자금 컨설팅." />
   <meta property="og:type" content="website" />
@@ -15,7 +14,6 @@
   <meta property="og:image" content="https://youareplan.co.kr/logo.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- 파비콘 -->
   <link rel="icon" type="image/png" href="logo.png" />
 
   <style>
@@ -45,7 +43,7 @@
       height:120px;
       width:auto;
       display:block;
-      filter:brightness(0) invert(1); /* 파란색 로고 → 흰색으로 표시 */
+      filter:brightness(0) invert(1);
     }
     @media (max-width:640px){
       .brand img{height:80px}
@@ -111,7 +109,6 @@
   </style>
 </head>
 <body id="top">
-  <!-- Header -->
   <header>
     <div class="wrap hero" role="banner">
       <div class="brand" aria-label="브랜드">
@@ -136,112 +133,106 @@
     </div>
   </header>
 
-  <!-- About -->
-  <section id="about">
-    <div class="wrap">
-      <h2>왜 유아플랜인가</h2>
-      <p class="sub">정부기관 프로세스로 <strong>정확성·투명성·추적성</strong>을 확보합니다.</p>
-      <div class="grid cols-3">
-        <div class="card"><strong>표준화 DB</strong><br>정부·공공 공고를 구조화해 일관성 있게 비교합니다.</div>
-        <div class="card"><strong>요건 매칭</strong><br>업력·업종·체납 등 핵심 조건을 한눈에 정리합니다.</div>
-        <div class="card"><strong>사람이 최종 판단</strong><br>AI 분석을 보조로, 컨설턴트가 책임 있게 안내합니다.</div>
-      </div>
-      <div class="trust" style="margin-top:18px">
-        <span class="tag">개인정보 최소수집·목적외 이용 금지</span>
-        <span class="tag">진행 단계·결과 리포트 제공</span>
-        <span class="tag">컴플라이언스 최우선</span>
-      </div>
-    </div>
-  </section>
-
-  <!-- Services -->
-  <section id="services">
-    <div class="wrap">
-      <h2>서비스 구성</h2>
-      <div class="grid cols-3">
-        <div class="card"><strong>① 1차 진단(무료)</strong><br>표준 설문으로 요건 적합성, 우선순위 후보를 빠르게 도출합니다.</div>
-        <div class="card"><strong>② 컨설팅 & 서류 준비</strong><br>신청 전략 수립, 증빙 체크리스트, 제출 문서 검토/작성까지 전담 지원.</div>
-        <div class="card"><strong>③ 실행 & 사후 추적</strong><br>접수/심사·보완 대응, 결과 리포트, 차기 스텝 가이드 제공.</div>
-      </div>
-      <h3 style="margin:26px 0 10px">진행 절차</h3>
-      <ol class="process">
-        <li>정보 수집 (기업마당·소진공·신보 등)</li>
-        <li>요건 매칭 (업력·업종·세금체납 여부)</li>
-        <li>결과 요약 및 우선순위 제시</li>
-        <li>상담/서류 준비</li>
-        <li>신청·실행 및 추적</li>
-      </ol>
-    </div>
-  </section>
-
-  <!-- Notice -->
-  <section id="notice">
-    <div class="wrap">
-      <h2>공지사항</h2>
-      <div class="table">
-        <div class="row head"><div class="cell">날짜</div><div class="cell">제목</div></div>
-        <div class="row"><div class="cell">2025-09-09</div><div class="cell">정책자금 진단 서비스 오픈</div></div>
-        <div class="row"><div class="cell">2025-10 예정</div><div class="cell">매칭 알고리즘/리포트 고도화 업데이트</div></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Cases -->
-  <section id="cases">
-    <div class="wrap">
-      <h2>사례 & 신뢰</h2>
-      <div class="grid cols-3">
-        <div class="card"><strong>제조 스타트업 A</strong><br>보조금 2건 동시 매칭, 서류 보완 1회로 통과.</div>
-        <div class="card"><strong>서비스 기업 B</strong><br>체납 이슈 → 대체 프로그램 제안으로 가결.</div>
-        <div class="card"><strong>예비창업 C</strong><br>예비창업 특화 과제 선별·사업계획서 코칭 → 지원 성공.</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- FAQ -->
-  <section id="faq">
-    <div class="wrap">
-      <h2>자주 묻는 질문</h2>
-      <div class="grid cols-3">
-        <div class="card"><strong>업력 없어도 가능한가요?</strong><br>예비창업 대상 프로그램도 있으니 1차 진단으로 확인.</div>
-        <div class="card"><strong>체납이 있으면 불가인가요?</strong><br>대부분 제한되지만 상황별 대안 검토 가능.</div>
-        <div class="card"><strong>기간은 얼마나 걸리나요?</strong><br>보통 2–6주. 기관/서류 준비도에 따라 달라집니다.</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Apply -->
-  <section id="apply">
-    <div class="wrap">
-      <h2>1차 진단 — 바로 작성</h2>
-      <iframe src="https://survey.youareplan.co.kr" title="유아플랜 1차 설문"></iframe>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact">
-    <div class="wrap">
-      <h2>문의하기</h2>
-      <div class="grid cols-2">
-        <div class="card">
-          <p><strong>유아플랜 컨설팅</strong></p>
-          <p>대표번호: 1661-8804</p>
-          <p>이메일: <a href="mailto:youareplan@naver.com">youareplan@naver.com</a></p>
-          <p><a href="https://pf.kakao.com/_LWxexmn" target="_blank">카카오톡 상담</a></p>
+  <main>
+    <section id="about">
+      <div class="wrap">
+        <h2>왜 유아플랜인가</h2>
+        <p class="sub">정부기관 프로세스로 <strong>정확성·투명성·추적성</strong>을 확보합니다.</p>
+        <div class="grid cols-3">
+          <div class="card"><strong>표준화 DB</strong><br>정부·공공 공고를 구조화해 일관성 있게 비교합니다.</div>
+          <div class="card"><strong>요건 매칭</strong><br>업력·업종·체납 등 핵심 조건을 한눈에 정리합니다.</div>
+          <div class="card"><strong>사람이 최종 판단</strong><br>AI 분석을 보조로, 컨설턴트가 책임 있게 안내합니다.</div>
         </div>
-        <div class="card">
-          <strong>사업자 정보</strong>
-          <div class="table" style="margin-top:10px">
-            <div class="row"><div class="cell head">상호</div><div class="cell">유아플랜 컨설팅</div></div>
-            <div class="row"><div class="cell head">사업자번호</div><div class="cell">515-10-64034</div></div>
-            <div class="row"><div class="cell head">대표</div><div class="cell">김대환</div></div>
+        <div class="trust" style="margin-top:18px">
+          <span class="tag">개인정보 최소수집·목적외 이용 금지</span>
+          <span class="tag">진행 단계·결과 리포트 제공</span>
+          <span class="tag">컴플라이언스 최우선</span>
+        </div>
+      </div>
+    </section>
+
+    <section id="services">
+      <div class="wrap">
+        <h2>서비스 구성</h2>
+        <div class="grid cols-3">
+          <div class="card"><strong>① 1차 진단(무료)</strong><br>표준 설문으로 요건 적합성, 우선순위 후보를 빠르게 도출합니다.</div>
+          <div class="card"><strong>② 컨설팅 & 서류 준비</strong><br>신청 전략 수립, 증빙 체크리스트, 제출 문서 검토/작성까지 전담 지원.</div>
+          <div class="card"><strong>③ 실행 & 사후 추적</strong><br>접수/심사·보완 대응, 결과 리포트, 차기 스텝 가이드 제공.</div>
+        </div>
+        <h3 style="margin:26px 0 10px">진행 절차</h3>
+        <ol class="process">
+          <li>정보 수집 (기업마당·소진공·신보 등)</li>
+          <li>요건 매칭 (업력·업종·세금체납 여부)</li>
+          <li>결과 요약 및 우선순위 제시</li>
+          <li>상담/서류 준비</li>
+          <li>신청·실행 및 추적</li>
+        </ol>
+      </div>
+    </section>
+
+    <section id="notice">
+      <div class="wrap">
+        <h2>공지사항</h2>
+        <div class="table">
+          <div class="row head"><div class="cell">날짜</div><div class="cell">제목</div></div>
+          <div class="row"><div class="cell">2025-09-09</div><div class="cell">정책자금 진단 서비스 오픈</div></div>
+          <div class="row"><div class="cell">2025-10 예정</div><div class="cell">매칭 알고리즘/리포트 고도화 업데이트</div></div>
+        </div>
+      </div>
+    </section>
+
+    <section id="cases">
+      <div class="wrap">
+        <h2>사례 & 신뢰</h2>
+        <div class="grid cols-3">
+          <div class="card"><strong>제조 스타트업 A</strong><br>보조금 2건 동시 매칭, 서류 보완 1회로 통과.</div>
+          <div class="card"><strong>서비스 기업 B</strong><br>체납 이슈 → 대체 프로그램 제안으로 가결.</div>
+          <div class="card"><strong>예비창업 C</strong><br>예비창업 특화 과제 선별·사업계획서 코칭 → 지원 성공.</div>
+        </div>
+      </div>
+    </section>
+
+    <section id="faq">
+      <div class="wrap">
+        <h2>자주 묻는 질문</h2>
+        <div class="grid cols-3">
+          <div class="card"><strong>업력 없어도 가능한가요?</strong><br>예비창업 대상 프로그램도 있으니 1차 진단으로 확인.</div>
+          <div class="card"><strong>체납이 있으면 불가인가요?</strong><br>대부분 제한되지만 상황별 대안 검토 가능.</div>
+          <div class="card"><strong>기간은 얼마나 걸리나요?</strong><br>보통 2–6주. 기관/서류 준비도에 따라 달라집니다.</div>
+        </div>
+      </div>
+    </section>
+
+    <section id="apply">
+      <div class="wrap">
+        <h2>1차 진단 — 바로 작성</h2>
+        <iframe src="https://survey.youareplan.co.kr" title="유아플랜 1차 설문"></iframe>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="wrap">
+        <h2>문의하기</h2>
+        <div class="grid cols-2">
+          <div class="card">
+            <p><strong>유아플랜 컨설팅</strong></p>
+            <p>대표번호: 1661-8804</p>
+            <p>이메일: <a href="mailto:youareplan@naver.com">youareplan@naver.com</a></p>
+            <p><a href="https://pf.kakao.com/_LWxexmn" target="_blank">카카오톡 상담</a></p>
+          </div>
+          <div class="card">
+            <strong>사업자 정보</strong>
+            <div class="table" style="margin-top:10px">
+              <div class="row"><div class="cell head">상호</div><div class="cell">유아플랜 컨설팅</div></div>
+              <div class="row"><div class="cell head">사업자번호</div><div class="cell">515-10-64034</div></div>
+              <div class="row"><div class="cell head">대표</div><div class="cell">김대환</div></div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
-  <!-- Footer -->
   <footer>
     <div class="wrap">
       <div><strong>유아플랜 컨설팅</strong> · youareplan.co.kr</div>
@@ -250,7 +241,6 @@
     </div>
   </footer>
 
-  <!-- Back to top -->
   <a class="top" href="#top">맨 위로</a>
 </body>
 </html>
