--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="정책자금, AI가 분석하고 사람이 결정합니다. 유아플랜은 실시간 공고·요건을 표준화해 맞춤 매칭을 투명하게 제시합니다.">
   <meta name="theme-color" content="#0B1B2B" />
 
+  <!-- Open Graph / SNS 미리보기 -->
   <meta property="og:title" content="유아플랜 컨설팅 | 정책자금 컨설팅" />
   <meta property="og:description" content="실시간 공고 표준화 DB + 요건 매칭 + 컨설턴트 최종 판단. 투명하고 신뢰 가능한 정책자금 컨설팅." />
   <meta property="og:type" content="website" />
@@ -14,16 +15,17 @@
   <meta property="og:image" content="https://youareplan.co.kr/logo.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <link rel="icon" type="image/png" href="logo.png" />
+  <!-- ✅ 파비콘 (심볼만 흰 배경 JPG 사용) -->
+  <link rel="icon" type="image/jpeg" href="logo_favicon.jpg" />
 
   <style>
     :root{
-      --primary:#005BAC;
-      --navy:#0B1B2B;
-      --text:#111827;
-      --muted:#6B7280;
-      --border:#E5E7EB;
-      --bg:#ffffff;
+      --primary:#005BAC; /* 정부 파랑 */
+      --navy:#0B1B2B;    /* 헤더 네이비 */
+      --text:#111827;    /* 본문 글자 */
+      --muted:#6B7280;   /* 보조 설명 */
+      --border:#E5E7EB;  /* 경계선 */
+      --bg:#ffffff;      /* 배경 */
       --radius:12px;
       --shadow:0 6px 24px rgba(16,24,40,.06);
     }
@@ -39,12 +41,7 @@
     }
     .wrap{max-width:1100px;margin:0 auto}
     .brand{display:flex;align-items:center;gap:16px;margin-bottom:8px}
-    .brand img{
-      height:200px;
-      width:auto;
-      display:block;
-      filter:brightness(0) invert(1);
-    }
+    .brand img{height:120px;width:auto;display:block}
     @media (max-width:640px){
       .brand img{height:80px}
     }
