--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>유아플랜 컨설팅 | 정책자금 컨설팅 · 표준화 매칭 · 신뢰 기반</title>
-  <meta name="description" content="정책자금, AI가 분석하고 사람이 결정합니다. 유아플랜은 실시간 공고·요건을 표준화해 맞춤 매칭을 투명하게 제시합니다.">
+  <title>유아플랜 | 정책자금 컨설팅 · 표준화 매칭 · 신뢰 기반</title>
+  <meta name="description" content="정책자금, 프로그램이 분석하고 전문가가 결정합니다. 유아플랜은 실시간 공고·요건을 표준화해 맞춤 매칭을 투명하게 제시합니다.">
   <meta name="theme-color" content="#0B1B2B" />
 
   <!-- Open Graph / SNS 미리보기 -->
-  <meta property="og:title" content="유아플랜 컨설팅 | 정책자금 컨설팅" />
+  <meta property="og:title" content="유아플랜 | 정책자금 컨설팅" />
   <meta property="og:description" content="실시간 공고 표준화 DB + 요건 매칭 + 컨설턴트 최종 판단. 투명하고 신뢰 가능한 정책자금 컨설팅." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://youareplan.co.kr" />
